--- a/api/src/test/resources/crds/v1/040-Crd-kafka.yaml
+++ b/api/src/test/resources/crds/v1/040-Crd-kafka.yaml
@@ -1173,7 +1173,7 @@ spec:
                                       type: string
                                       enum:
                                       - Memory
-                                      description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                      description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                     sizeLimit:
                                       type: string
                                       pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
@@ -2845,7 +2845,7 @@ spec:
                                       type: string
                                       enum:
                                       - Memory
-                                      description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                      description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                     sizeLimit:
                                       type: string
                                       pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
@@ -4093,7 +4093,7 @@ spec:
                                       type: string
                                       enum:
                                       - Memory
-                                      description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                      description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                     sizeLimit:
                                       type: string
                                       pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
@@ -5219,7 +5219,7 @@ spec:
                                       type: string
                                       enum:
                                       - Memory
-                                      description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                      description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                     sizeLimit:
                                       type: string
                                       pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
