--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/041-Crd-kafkaconnect.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/041-Crd-kafkaconnect.yaml
@@ -999,7 +999,7 @@ spec:
                                     type: string
                                     enum:
                                       - Memory
-                                    description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                    description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                   sizeLimit:
                                     type: string
                                     pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
@@ -2054,7 +2054,7 @@ spec:
                                     type: string
                                     enum:
                                       - Memory
-                                    description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                    description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                   sizeLimit:
                                     type: string
                                     pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
@@ -3670,7 +3670,7 @@ spec:
                                     type: string
                                     enum:
                                       - Memory
-                                    description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                    description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                   sizeLimit:
                                     type: string
                                     pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
@@ -4725,7 +4725,7 @@ spec:
                                     type: string
                                     enum:
                                       - Memory
-                                    description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                    description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                   sizeLimit:
                                     type: string
                                     pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
