--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/046-Crd-kafkabridge.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/046-Crd-kafkabridge.yaml
@@ -1024,7 +1024,7 @@ spec:
                                     type: string
                                     enum:
                                       - Memory
-                                    description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                    description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                   sizeLimit:
                                     type: string
                                     pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
@@ -2650,7 +2650,7 @@ spec:
                                     type: string
                                     enum:
                                       - Memory
-                                    description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                    description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                   sizeLimit:
                                     type: string
                                     pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
