--- a/packaging/install/cluster-operator/048-Crd-kafkamirrormaker2.yaml
+++ b/packaging/install/cluster-operator/048-Crd-kafkamirrormaker2.yaml
@@ -1248,7 +1248,7 @@ spec:
                                   type: string
                                   enum:
                                   - Memory
-                                  description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                  description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                 sizeLimit:
                                   type: string
                                   pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
@@ -2303,7 +2303,7 @@ spec:
                                   type: string
                                   enum:
                                   - Memory
-                                  description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                  description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                 sizeLimit:
                                   type: string
                                   pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
@@ -4478,7 +4478,7 @@ spec:
                                   type: string
                                   enum:
                                   - Memory
-                                  description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                  description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                 sizeLimit:
                                   type: string
                                   pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
@@ -5533,7 +5533,7 @@ spec:
                                   type: string
                                   enum:
                                   - Memory
-                                  description: Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`.
+                                  description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                 sizeLimit:
                                   type: string
                                   pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
