Minor: fix MM2 TLS examples
This patch fixes a trivial error in MM2 TLS examples.

Signed-off-by: Federico Valeri <fedevaleri@gmail.com>

--- a/packaging/examples/mirror-maker/kafka-mirror-maker-2-tls.yaml
+++ b/packaging/examples/mirror-maker/kafka-mirror-maker-2-tls.yaml
@@ -25,9 +25,10 @@ spec:
   - source:
       alias: cluster-a
       bootstrapServers: cluster-a-kafka-bootstrap:9093
-      trustedCertificates:
-        - secretName: cluster-a-cluster-ca-cert
-          pattern: "*.crt"
+      tls:
+        trustedCertificates:
+          - secretName: cluster-a-cluster-ca-cert
+            pattern: "*.crt"
     sourceConnector:
       tasksMax: 1
       config:
