--- a/api/src/test/resources/crds/v1/040-Crd-kafka.yaml
+++ b/api/src/test/resources/crds/v1/040-Crd-kafka.yaml
@@ -30,13 +30,17 @@ spec:
       description: The state of the custom resource
       jsonPath: ".status.conditions[?(@.type==\"Ready\")].status"
       type: string
-    - name: Metadata State
-      description: The state of the cluster metadata
-      jsonPath: .status.kafkaMetadataState
-      type: string
     - name: Warnings
       description: Warnings related to the custom resource
       jsonPath: ".status.conditions[?(@.type==\"Warning\")].status"
+      type: string
+    - name: Kafka version
+      description: The Kafka version used by the cluster
+      jsonPath: .status.kafkaVersion
+      type: string
+    - name: Metadata version
+      description: The Kafka metadata version used by the cluster
+      jsonPath: .status.kafkaMetadataVersion
       type: string
     schema:
       openAPIV3Schema:
