doc(11784): specify in kafka listener broker cert chain that PKCS#8 is mandatory
Also complete the 'Providing your own listener certificates' sub part with explanation to how obtain a PKCS#8 with certmanager
Closes #11784

Signed-off-by: RouxAntoine <antoinroux@hotmail.fr>

--- a/api/src/test/resources/crds/v1/041-Crd-kafkaconnect.yaml
+++ b/api/src/test/resources/crds/v1/041-Crd-kafkaconnect.yaml
@@ -121,7 +121,7 @@ spec:
                         description: The name of the file certificate in the Secret.
                       key:
                         type: string
-                        description: The name of the private key in the Secret.
+                        description: "The name of the private key in the secret. The private key must be in unencrypted PKCS #8 format. For more information, see RFC 5208: https://datatracker.ietf.org/doc/html/rfc5208."
                     required:
                     - secretName
                     - certificate
