--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/048-Crd-kafkamirrormaker2.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/048-Crd-kafkamirrormaker2.yaml
@@ -129,7 +129,7 @@ spec:
                               description: The name of the file certificate in the Secret.
                             key:
                               type: string
-                              description: The name of the private key in the Secret.
+                              description: "The name of the private key in the secret. The private key must be in unencrypted PKCS #8 format. For more information, see RFC 5208: https://datatracker.ietf.org/doc/html/rfc5208."
                           required:
                             - secretName
                             - certificate
@@ -241,7 +241,7 @@ spec:
                                     description: The name of the file certificate in the Secret.
                                   key:
                                     type: string
-                                    description: The name of the private key in the Secret.
+                                    description: "The name of the private key in the secret. The private key must be in unencrypted PKCS #8 format. For more information, see RFC 5208: https://datatracker.ietf.org/doc/html/rfc5208."
                                 required:
                                   - secretName
                                   - certificate
@@ -2761,7 +2761,7 @@ spec:
                                 description: The name of the file certificate in the Secret.
                               key:
                                 type: string
-                                description: The name of the private key in the Secret.
+                                description: "The name of the private key in the secret. The private key must be in unencrypted PKCS #8 format. For more information, see RFC 5208: https://datatracker.ietf.org/doc/html/rfc5208."
                             required:
                               - secretName
                               - certificate
@@ -3011,7 +3011,7 @@ spec:
                               description: The name of the file certificate in the Secret.
                             key:
                               type: string
-                              description: The name of the private key in the Secret.
+                              description: "The name of the private key in the secret. The private key must be in unencrypted PKCS #8 format. For more information, see RFC 5208: https://datatracker.ietf.org/doc/html/rfc5208."
                           required:
                             - secretName
                             - certificate
@@ -3264,7 +3264,7 @@ spec:
                                     description: The name of the file certificate in the Secret.
                                   key:
                                     type: string
-                                    description: The name of the private key in the Secret.
+                                    description: "The name of the private key in the secret. The private key must be in unencrypted PKCS #8 format. For more information, see RFC 5208: https://datatracker.ietf.org/doc/html/rfc5208."
                                 required:
                                   - secretName
                                   - certificate
