--- a/.github/actions/systemtests/run-perf-report/action.yml
+++ b/.github/actions/systemtests/run-perf-report/action.yml
@@ -1,9 +1,6 @@
 name: Run Performance Report
 description: Downloads artifacts, generates performance report, and posts results
 inputs:
-  ref:
-    description: 'Git ref to checkout'
-    required: true
   artifacts-pattern:
     description: 'Pattern for performance artifacts to download'
     required: false
@@ -34,7 +31,7 @@ runs:
       env:
         PERF_DIR: ${{ inputs.artifacts-path }}
       with:
-        github-token: ${{ github.token || 'dummy-token-for-local-testing' }}
+        github-token: ${{ github.token }}
         script: |
           const { generatePerformanceReport } = require('./.github/actions/systemtests/run-perf-report/generate-report.js');
           const perfDir = process.env.PERF_DIR || 'systemtest/target/performance';
