Improve quoting of numbers in `v1` API conversion
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/v1-api-conversion/src/test/resources/io/strimzi/kafka/api/conversion/v1/cli/kafka-all-out.yaml
+++ b/v1-api-conversion/src/test/resources/io/strimzi/kafka/api/conversion/v1/cli/kafka-all-out.yaml
@@ -100,10 +100,10 @@ spec:
       resources:
         requests:
           memory: 256Mi
-          cpu: 200m
+          cpu: "0.2"
         limits:
           memory: 256Mi
-          cpu: 500m
+          cpu: "0.5"
     userOperator:
       reconciliationIntervalSeconds: 30
       zookeeperSessionTimeoutSeconds: 15
